semi-final, without menu drop down on hover

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <a href="#">
                   <img src="footages/province.jpg" alt="" />
                 </a>
-                <a class="topic position-absolute bottom-0">
+                <a href="#" class="topic position-absolute bottom-0">
                   <h3>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم</h3>
                 </a>
               </div>
