--- a/index.html
+++ b/index.html
@@ -96,23 +96,43 @@
             <img src="footages/econews-main-banner.png" alt="" />
             <div class="collapse navbar-collapse m-2">
               <div class="navbar-nav d-none d-lg-flex">
-                <a class="nav-item nav-link" href="#">
+                <a
+                  class="nav-item nav-link"
+                  href="#"
+                  id="akhbar"
+                  onmouseover="mouseOverToggle()"
+                  onmouseout="mouseOutToggle()"
+                  id="new"
+                  class="child new"
+                >
                   اخبارها و رویدادها
                   <i class="fa-solid fa-caret-down"></i>
+                  <div id="newDropDown" class="new dropdown">
+                    <!-- <a href="#">First option</a> -->
+                    <div class="">
+                      <a href="">دسته بندی عمومی</a>
+                      <a href="">سیاست</a>
+                      <a href="">فرهنگ</a>
+                      <a href="">جامعه</a>
+                      <a href="">سلامت</a>
+                      <a href="">فناوری</a>
+                    </div>
+                  </div>
                 </a>
-                <a class="nav-item nav-link" href="#">
+
+                <a class="nav-item nav-link" href="#" id="nerkh">
                   نرخ‌ها و داده‌ها
                   <i class="fa-solid fa-caret-down"></i>
                 </a>
-                <a class="nav-item nav-link" href="#">
+                <a class="nav-item nav-link" href="#" id="ostan">
                   استان‌ها
                   <i class="fa-solid fa-caret-down"></i>
                 </a>
-                <a class="nav-item nav-link" href="#">
+                <a class="nav-item nav-link" href="#" id="mantaghe-azad">
                   مناطق آزاد
                   <i class="fa-solid fa-caret-down"></i>
                 </a>
-                <a class="nav-item nav-link" href="#">
+                <a class="nav-item nav-link" href="#" id="chandresane">
                   چندرسانه‌ای
                   <i class="fa-solid fa-caret-down"></i>
                 </a>
@@ -236,7 +256,7 @@
                 <div class="title">
                   <a class="d-flex align-items-center" href="#">
                     <i class="fa-solid fa-bookmark"></i>
-                    <span>تازه‌های</span>
+                    <span class="mx-1">تازه‌های</span>
                     <span> ورزش</span>
                   </a>
                 </div>
@@ -338,9 +358,8 @@
         </div>
         <!-- باکس تبلیغات، بعد از سلکتور اسلایدشو -->
         <div class="adv-box-main container">
-          <div class="">
-            <a href="#"><img src="footages/adv01.gif" alt="" /></a>
-          </div>
+          <a href="#"><img src="footages/adv01.gif" alt="" /></a>
+          <div class=""></div>
         </div>
       </div>
     </main>
@@ -388,7 +407,7 @@
                     <div class="tab-pane fade show active" id="nav-gold" role="tabpanel" aria-labelledby="nav-gold-tab">
                       <div class="">
                         <div class="price-box">
-                          <table class="table table-sm">
+                          <table class="table table-hover table-sm">
                             <thead>
                               <tr class="bg-primary">
                                 <th scope="col">طلا</th>
@@ -448,7 +467,7 @@
                       <div class="chart">
                         <div class="price-box">
                           <div class="col">
-                            <table class="table table-sm">
+                            <table class="table table-hover table-sm">
                               <thead>
                                 <tr class="bg-primary">
                                   <th scope="col">سکه</th>
@@ -545,7 +564,7 @@
                     <div class="tab-pane fade show active" id="nav-nima" role="tabpanel" aria-labelledby="nav-nima-tab">
                       <div class="">
                         <div class="price-box">
-                          <table class="table table-sm">
+                          <table class="table table-hover table-sm">
                             <thead>
                               <tr class="bg-primary">
                                 <th scope="col">ارز</th>
@@ -611,7 +630,7 @@
                       <div class="chart">
                         <div class="price-box">
                           <div class="col">
-                            <table class="table table-sm">
+                            <table class="table table-hover table-sm">
                               <thead>
                                 <tr class="bg-primary">
                                   <th scope="col">سکه</th>
@@ -1169,10 +1188,8 @@
           <div class="content-col-banner-right col-md-4 col-lg-3">
             <a href="#" class="bg-and-border">
               <div class="background p-1">
-                <img src="footages/finance-04.jpg" alt="" class="mb-2" />
-                <h2 style="font-size: 23px !important ; font-weight: 700">
-                  لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ
-                </h2>
+                <img src="footages/financce.jpg" alt="" class="mb-2" />
+                <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</p>
               </div>
             </a>
           </div>
@@ -1217,7 +1234,7 @@
           </div>
           <!-- لیست بدون ثامنیل، ستون  سه / چهار -->
           <div class="content-col-li col-md-4 col-lg-3">
-            <ul class="px-2">
+            <ul class="p-2">
               <li><a href="#">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</a></li>
               <li><a href="#">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم</a></li>
               <li><a href="#">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</a></li>
@@ -1233,7 +1250,7 @@
           <div class="content-col-banner-left col-md-4 col-lg-3">
             <a href="#" class="bg-and-border">
               <div class="background p-1">
-                <img src="footages/finance-04.jpg" alt="" class="mb-2" />
+                <img src="footages/financce.jpg" alt="" class="mb-2" />
                 <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</p>
               </div>
             </a>
@@ -1324,7 +1341,7 @@
           </div>
           <!-- لیست بدون ثامنیل، ستون  سه / چهار -->
           <div class="content-col-li col-md-4 col-lg-3">
-            <ul class="px-2">
+            <ul class="p-2">
               <li><a href="#">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</a></li>
               <li><a href="#">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم</a></li>
               <li><a href="#">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</a></li>
@@ -1383,7 +1400,7 @@
           <div class="content-col-banner-right col-md-4 col-lg-3">
             <a href="#" class="bg-and-border">
               <div class="background p-1">
-                <img src="footages/finance-04.jpg" alt="" class="mb-2" />
+                <img src="footages/sports.jpg" alt="" class="mb-2" />
                 <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</p>
               </div>
             </a>
@@ -1429,7 +1446,7 @@
           </div>
           <!-- لیست بدون ثامنیل، ستون  سه / چهار -->
           <div class="content-col-li col-md-4 col-lg-3">
-            <ul class="px-2">
+            <ul class="p-2">
               <li><a href="#">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</a></li>
               <li><a href="#">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم</a></li>
               <li><a href="#">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</a></li>
@@ -1445,7 +1462,7 @@
           <div class="content-col-banner-left col-md-4 col-lg-3">
             <a href="#" class="bg-and-border">
               <div class="background p-1">
-                <img src="footages/finance-04.jpg" alt="" class="mb-2" />
+                <img src="footages/sports.jpg" alt="" class="mb-2" />
                 <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</p>
               </div>
             </a>
@@ -1489,7 +1506,7 @@
           <div class="content-col-banner-right col-md-4 col-lg-3">
             <a href="#" class="bg-and-border">
               <div class="background p-1">
-                <img src="footages/finance-04.jpg" alt="" class="mb-2" />
+                <img src="footages/tourism.jpg" alt="" class="mb-2" />
                 <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</p>
               </div>
             </a>
@@ -1535,7 +1552,7 @@
           </div>
           <!-- لیست بدون ثامنیل، ستون  سه / چهار -->
           <div class="content-col-li col-md-4 col-lg-3">
-            <ul class="px-2">
+            <ul class="p-2">
               <li><a href="#">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</a></li>
               <li><a href="#">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم</a></li>
               <li><a href="#">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</a></li>
@@ -1551,7 +1568,7 @@
           <div class="content-col-banner-left col-md-4 col-lg-3">
             <a href="#" class="bg-and-border">
               <div class="background p-1">
-                <img src="footages/finance-04.jpg" alt="" class="mb-2" />
+                <img src="footages/tourism.jpg" alt="" class="mb-2" />
                 <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ</p>
               </div>
             </a>
@@ -1944,9 +1961,9 @@
         <div class="footer-search navbar-search">
           <div class="icons-and-selector-gropu d-flex">
             <div class="guiding-icons">
-              <a href="" class="scroll-up"> <i class="fa-solid fa-chevron-up"></i></a>
-              <a href="" class="footer-rss"> <i class="fa-solid fa-rss"></i></a>
-              <a href="" class="footer-home"> <i class="fa-solid fa-house-chimney"></i></a>
+              <a href="#" class="scroll-up"> <i class="fa-solid fa-chevron-up"></i></a>
+              <a href="#" class="footer-rss"> <i class="fa-solid fa-rss"></i></a>
+              <a href="#" class="footer-home"> <i class="fa-solid fa-house-chimney"></i></a>
             </div>
             <div class="province-selector">
               <select
@@ -2079,22 +2096,22 @@
             <div class="social">
               <ul>
                 <a href="#"
-                  ><li><i class="fa-brands fa-twitter"></i></li
+                  ><li><i class="fa-brands fa-facebook facebook"></i></li
                 ></a>
                 <a href="#"
-                  ><li><i class="fa-brands fa-linkedin-in"></i></li
+                  ><li><i class="fa-brands fa-linkedin-in linkedin"></i></li
                 ></a>
                 <a href="#"
-                  ><li><i class="fa-brands fa-instagram"></i></li
+                  ><li><i class="fa-brands fa-instagram instagram"></i></li
                 ></a>
                 <a href="#"
-                  ><li><i class="fa-brands fa-linkedin-in"></i></li
+                  ><li><i class="fa-brands fa-reddit-alien reddit"></i></li
                 ></a>
                 <a href="#"
-                  ><li><i class="fa-solid fa-paper-plane"></i></li
+                  ><li><i class="fa-solid fa-paper-plane telegram"></i></li
                 ></a>
                 <a href="#"
-                  ><li><i class="fa-brands fa-twitter"></i></li
+                  ><li><i class="fa-brands fa-twitter twitter"></i></li
                 ></a>
               </ul>
             </div>
@@ -2176,5 +2193,6 @@
       </div>
     </section>
     <script src="js/bootstrap.bundle.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
